devel/cleanup: smarty icon element parameter 'fw' changed default value to 'true'

--- a/templates/default/cash/cashimport.html
+++ b/templates/default/cash/cashimport.html
@@ -70,7 +70,7 @@
 			{if $division.list}
 				<tr>
 					<td colspan="4" class="dark">
-						{icon name="division" fw=true}
+						{icon name="division"}
 						<strong>{$division.name|escape}</strong>
 					</td>
 					<td colspan="3" class="dark text-right">
@@ -265,7 +265,7 @@
     <tbody>
 		<tr>
 			<td class="nobr valign-top" id="file-label">
-				{icon name="fileupload" fw=true}
+				{icon name="fileupload"}
 				<strong>{trans("Import files:")}</strong>
 			</td>
 			<td class="nobr">
@@ -274,7 +274,7 @@
 		</tr>
 		<tr>
 			<td class="nobr">
-				{icon name="cashsource" fw=true}
+				{icon name="cashsource"}
 				<strong>{trans("Source:")}</strong>
 			</td>
 			<td class="nobr">
@@ -301,7 +301,7 @@
     <thead>
 		<tr>
 			<td>
-				{icon name="fileupload" fw=true}
+				{icon name="fileupload"}
 				<strong>{trans("Packages:")}</strong>
 			</td>
 		</tr>
