--- a/templates/default/cash/cashsourceedit.html
+++ b/templates/default/cash/cashsourceedit.html
@@ -14,7 +14,7 @@
 	<thead>
 		<tr>
 			<td>
-				{icon name="cashsource" fw=true}
+				{icon name="cashsource"}
 			</td>
 			<td>
 				<strong>{trans("Name:")}</strong>
@@ -28,7 +28,7 @@
 	<tbody>
 		<tr>
 			<td>
-				{icon name="account-number" fw=true}
+				{icon name="account-number"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Bank account:")}</strong>
@@ -40,7 +40,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="info" fw=true}
+				{icon name="info"}
 			</td>
 			<td>
 				<strong>{trans("Description:")}</strong>
