--- a/templates/default/customer/customerassignmentinfoshort.html
+++ b/templates/default/customer/customerassignmentinfoshort.html
@@ -16,7 +16,7 @@
     <THEAD>
 		<TR>
 			<TD>
-				{icon name="money" fw=true}
+				{icon name="money"}
 			</TD>
 			<TD class="bold nobr" colspan="2">
 				{trans("Liability's Options:")}
@@ -28,9 +28,9 @@
 		<tr>
 			<td>
 				{if $assignment.value < 0}
-					{icon name="reward" fw=true}
+					{icon name="reward"}
 				{else}
-					{icon name="penalty" fw=true}
+					{icon name="penalty"}
 				{/if}
 			</td>
 			<td class="bold nobr">
@@ -56,7 +56,7 @@
 		{if $assignment.attribute}
 		<TR>
 			<TD>
-				{icon name="user-id-number" fw=true}
+				{icon name="user-id-number"}
 			</TD>
 			<TD class="bold nobr">
 				{trans("Attribute:")}
@@ -68,14 +68,14 @@
 		{/if}
 		<TR>
 			<TD>
-				{icon name="user-id-number" fw=true}
+				{icon name="user-id-number"}
 			</TD>
 			<TD class="bold nobr">{trans("Numbering Plan:")}</TD>
 			<TD class="nobr">{if $assignment.numberplan}{$assignment.numberplan}{else}{trans("default")}{/if}</TD>
 		</TR>
 		<TR>
 			<TD>
-				{icon name="print" fw=true}
+				{icon name="print"}
 			</TD>
 			<TD class="bold nobr">
 				{trans("Payment Type:")}
@@ -86,7 +86,7 @@
 		</TR>
 		<TR>
 			<TD>
-				{icon name="options" fw=true}
+				{icon name="options"}
 			</TD>
 			<TD class="nobr">
 				{trans("document type:")}
@@ -105,7 +105,7 @@
 		</TR>
 		<TR>
 			<TD>
-				{icon name="options" fw=true}
+				{icon name="options"}
 			</TD>
 			<TD class="nobr">
 				{trans("separate document")}
@@ -116,7 +116,7 @@
 		</TR>
 		<TR>
 			<TD>
-				{icon name="money" fw=true}
+				{icon name="money"}
 			</TD>
 			<TD class="nobr">
 				{trans("split payment")}
@@ -127,7 +127,7 @@
 		</TR>
 		<TR>
 			<TD>
-				{icon name="money" fw=true}
+				{icon name="money"}
 			</TD>
 			<TD class="nobr">
 				{trans("Tax category:")}
@@ -142,7 +142,7 @@
 		</TR>
 		<TR>
 			<TD>
-				{icon name="options" fw=true}
+				{icon name="options"}
 			</TD>
 			<TD class="nobr">
 				{trans("with settlement")}:
@@ -153,7 +153,7 @@
 		</TR>
 		<TR>
 			<td>
-				{icon name="document" fw=true}
+				{icon name="document"}
 			</td>
 			<TD class="nobr">
 				{trans("Reference document:")}
