--- a/templates/default/customer/customergroupedit.html
+++ b/templates/default/customer/customergroupedit.html
@@ -19,7 +19,7 @@
     <thead>
 		<tr>
 			<td>
-				{icon name="customergroup" fw=true}
+				{icon name="customergroup"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Name:")}</strong>
@@ -34,7 +34,7 @@
     <tbody>
 		<tr>
 			<td>
-				{icon name="info" fw=true}
+				{icon name="info"}
 			</td>
 			<td>
 				<strong>{trans("Description:")}</strong>
