--- a/templates/default/customer/customergroupinfo.html
+++ b/templates/default/customer/customergroupinfo.html
@@ -11,7 +11,7 @@
 	<thead>
 		<tr>
 			<td>
-				{icon name="customergroup" fw=true}
+				{icon name="customergroup"}
 			</td>
 			<td class="nobr" colspan="2">
 				<strong>{$customergroup.name} ({$customergroup.id|string_format:"%04d"})</strong>
@@ -21,7 +21,7 @@
 	<tbody>
 		<tr>
 			<td>
-				{icon name="customer" fw=true}
+				{icon name="customer"}
 			</td>
 			<td class="nobr" colspan="2">
 				<strong>{trans("Members Count:")}</strong>
@@ -31,7 +31,7 @@
 		{if $customergroup.description}
 		<tr>
 			<td>
-				{icon name="info" fw=true}
+				{icon name="info"}
 			</td>
 			<td colspan="2">
 				<table width="100%" cellpadding="3">
