--- a/templates/default/customer/customersearch.html
+++ b/templates/default/customer/customersearch.html
@@ -89,7 +89,7 @@
 	<TBODY>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="customer" fw=true} {trans("First/last or Company name:")}
+			{icon name="customer"} {trans("First/last or Company name:")}
 		</TD>
 		<TD>
 			<input type="text" name="search[customername]" value="{$search.customername}">
@@ -102,7 +102,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="karma" fw=true} {trans("Karma:")}
+			{icon name="karma"} {trans("Karma:")}
 		</TD>
 		<TD>
 			<INPUT type="text" name="search[karma]" VALUE="{$search.karma}"
@@ -111,7 +111,7 @@
 	</TR>
 	<TR>
 		<TD style="width: 1%;" class="bold nobr">
-			{icon name="home" fw=true} {trans("Address:")}
+			{icon name="home"} {trans("Address:")}
 		</TD>
 		<TD style="width: 99%;" class="nobr">
 			<INPUT type="text" name="search[address]" VALUE="{$search.address}">
@@ -128,7 +128,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="phone" fw=true} {trans("Phone:")}
+			{icon name="phone"} {trans("Phone:")}
 		</TD>
 		<TD class="nobr">
 			<INPUT type="tel" name="search[phone]" VALUE="{$search.phone}">
@@ -136,7 +136,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="mail" fw=true} {trans("E-mail:")}
+			{icon name="mail"} {trans("E-mail:")}
 		</TD>
 		<TD>
 			<INPUT type="email" name="search[email]" VALUE="{$search.email}">
@@ -155,7 +155,7 @@
 
 	<TR>
 		<TD class="nobr bold">
-			{icon name="user-id-number" fw=true} {trans("Identity type:")}
+			{icon name="user-id-number"} {trans("Identity type:")}
 		</TD>
 		<TD>
 			{identitytypes elemname="search[ict]" selected=$search.ict}
@@ -163,7 +163,7 @@
 	</TR>
 	<TR>
 		<TD class="nobr bold">
-			{icon name="user-id-number" fw=true} {trans("Identity number:")}
+			{icon name="user-id-number"} {trans("Identity number:")}
 		</TD>
 		<TD>
 			<INPUT type="text" name="search[icn]" VALUE="{$search.icn}">
@@ -171,7 +171,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="user-id-number" fw=true} {trans("SSN:")}
+			{icon name="user-id-number"} {trans("SSN:")}
 		</TD>
 		<TD>
 			<INPUT type="text" name="search[ssn]" VALUE="{$search.ssn}">
@@ -179,7 +179,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="user-id-number" fw=true} {trans("TEN:")}
+			{icon name="user-id-number"} {trans("TEN:")}
 		</TD>
 		<TD>
 			<input type="text" name="search[ten]" id="search-ten"
@@ -194,7 +194,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="user-id-number" fw=true} {trans("REGON:")}
+			{icon name="user-id-number"} {trans("REGON:")}
 		</TD>
 		<TD>
 			<INPUT type="text" name="search[regon]" VALUE="{$search.regon}">
@@ -202,7 +202,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="user-id-number" fw=true} {trans("RBE:")}
+			{icon name="user-id-number"} {trans("RBE:")}
 		</TD>
 		<TD>
 			<INPUT type="text" name="search[rbe]" VALUE="{$search.rbe}">
@@ -210,7 +210,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="notes" fw=true} {trans("Notes:")}
+			{icon name="notes"} {trans("Notes:")}
 		</TD>
 		<TD>
 			<INPUT type="text" name="search[notes]" VALUE="{$search.notes}">
@@ -218,7 +218,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="optional-info" fw=true} {trans("Additional information:")}
+			{icon name="optional-info"} {trans("Additional information:")}
 		</TD>
 		<TD>
 			<INPUT type="text" name="search[info]" VALUE="{$search.info}">
@@ -226,7 +226,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="legal-personality" fw=true} {trans("Legal personality:")}
+			{icon name="legal-personality"} {trans("Legal personality:")}
 		</TD>
 		<TD>
 			<SELECT SIZE="1" name="search[type]">
@@ -238,7 +238,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="legal-personality" fw=true} {trans("Flags:")}
+			{icon name="legal-personality"} {trans("Flags:")}
 		</TD>
 		<TD>
 			<input type="hidden" name="flags[]" value="0">
@@ -308,7 +308,7 @@
 
 	<TR>
 		<TD class="bold nobr">
-			{icon name="location" fw=true} {trans("Country state:")}
+			{icon name="location"} {trans("Country state:")}
 		</TD>
 		<TD>
 			<SELECT name="search[stateid]" {tip text="Select country state"}>
@@ -321,7 +321,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="netdev" fw=true} {trans("Link type:")}
+			{icon name="netdev"} {trans("Link type:")}
 		</TD>
 		<TD>
 			<SELECT SIZE="1" name="search[linktype]" onchange="change_linktype(this.options[this.selectedIndex].value)">
@@ -334,7 +334,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="netdev" fw=true} {trans("Link technology:")}
+			{icon name="netdev"} {trans("Link technology:")}
 		</TD>
 		<TD>
 			<SELECT SIZE="1" name="search[linktechnology]" id="linktechnology">
@@ -349,7 +349,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="netdev" fw=true} {trans("Link speed:")}
+			{icon name="netdev"} {trans("Link speed:")}
 		</TD>
 		<TD>
 			<SELECT SIZE="1" name="search[linkspeed]">
@@ -362,7 +362,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="money" fw=true} {trans("Tariffs:")}
+			{icon name="money"} {trans("Tariffs:")}
 		</TD>
 		<TD class="multiselect">
 			<SELECT SIZE="1" name="search[tariffs][]" class="lms-ui-multiselect" multiple data-default-value="{trans("- all -")}">
@@ -380,7 +380,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="money" fw=true} {trans("Tariff type:")}
+			{icon name="money"} {trans("Tariff type:")}
 		</TD>
 		<TD>
 			<SELECT SIZE="1" name="search[tarifftype]">
@@ -393,7 +393,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="money" fw=true} {trans("Assignments:")}
+			{icon name="money"} {trans("Assignments:")}
 		</TD>
 		<TD>
 			<select size="1" id="assignment-selector" name="search[assignments]">
@@ -419,7 +419,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="modified-date" fw=true} {trans("Created:")}
+			{icon name="modified-date"} {trans("Created:")}
 		</TD>
 		<TD>
 			{date_period_preset from="#customersearch [name=\"search[createdfrom]\"]" to="#customersearch [name=\"search[createdto]\"]"}
@@ -429,7 +429,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="modified-date" fw=true} {trans("Deleted:")}
+			{icon name="modified-date"} {trans("Deleted:")}
 		</TD>
 		<TD>
 			{date_period_preset from="#customersearch [name=\"search[deletedfrom]\"]" to="#customersearch [name=\"search[deletedto]\"]"}
@@ -439,7 +439,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="spacer" fw=true} {trans("Qualification operator:")}
+			{icon name="spacer"} {trans("Qualification operator:")}
 		</TD>
 		<TD>
 			<INPUT class="radio light" type="radio" id="operator0" value="AND" name="k"{if $k!='OR'} CHECKED{/if}><label for="operator0">{trans("and")}</label>
@@ -451,7 +451,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="division" fw=true} {trans("Division")}:
+			{icon name="division"} {trans("Division")}:
 		</TD>
 		<TD>
 			<SELECT SIZE="1" name="d">
@@ -465,7 +465,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="filter" fw=true} {trans("Status:")}
+			{icon name="filter"} {trans("Status:")}
 		</TD>
 		<TD>
 			<input type="hidden" name="s[]" value="0">
@@ -512,7 +512,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="money" fw=true} {trans("Balance:")}
+			{icon name="money"} {trans("Balance:")}
 		</TD>
 		<TD>
 			<label>
@@ -530,7 +530,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="ipnetwork" fw=true} {trans("Network:")}
+			{icon name="ipnetwork"} {trans("Network:")}
 		</TD>
 		<TD>
 			<input type="hidden" name="n" value="all">
@@ -543,7 +543,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="customergroup" fw=true} {trans("Group:")}
+			{icon name="customergroup"} {trans("Group:")}
 		</TD>
 		<TD>
 			<SELECT SIZE="1" name="g[]" multiple class="lms-ui-multiselect">
@@ -557,7 +557,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="nodegroup" fw=true} {trans("Nodes Group:")}
+			{icon name="nodegroup"} {trans("Nodes Group:")}
 		</TD>
 		<TD>
 			<SELECT SIZE="1" name="ng">
