--- a/templates/default/document/documentadd.html
+++ b/templates/default/document/documentadd.html
@@ -72,7 +72,7 @@
     <thead>
 		<tr>
 			<td>
-				{icon name="document" fw=true}
+				{icon name="document"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Title:")}</strong>
@@ -86,7 +86,7 @@
     <tbody>
 		<tr id="customerselection">
 			<td>
-				{icon name="customer" fw=true}
+				{icon name="customer"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Customer:")}</strong>
@@ -98,7 +98,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="period" fw=true}
+				{icon name="period"}
 			</td>
 			<td>
 				<strong>{trans("Period:")}</strong>
@@ -120,7 +120,7 @@
 		</tr>
 		<tr{if $document.closed} style="display: none;"{/if}>
 			<td>
-				{icon name="period" fw=true}
+				{icon name="period"}
 			</td>
 			<td>
 				<strong>{trans("Wait for customer action till:")}</strong>
@@ -135,7 +135,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="description" fw=true}
+				{icon name="description"}
 			</td>
 			<td>
 				<strong>{trans("Description:")}</strong>
@@ -147,7 +147,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="type" fw=true}
+				{icon name="type"}
 			</td>
 			<td>
 				<strong>{trans("Type:")}</strong>
@@ -166,7 +166,7 @@
 		</tr>
 		<tr id="templates" style="display:{if $document.type<0}table-row{else}none{/if}">
 			<td>
-				{icon name="template" fw=true}
+				{icon name="template"}
 			</td>
 			<td>
 				<strong>{trans("Template:")}</strong>
@@ -184,7 +184,7 @@
 		</tr>
 		<tr id="document-file-row"{if !$document.type} style="display: none;"{/if}>
 			<td>
-				{icon name="import" fw=true}
+				{icon name="import"}
 			</td>
 			<td>
 				<strong>{trans("Files:")}</strong>
@@ -195,7 +195,7 @@
 		</tr>
 		<tr id="attachment-row"{if !$attachment_result} style="display: none;"{/if}>
 			<td>
-				{icon name="import" fw=true}
+				{icon name="import"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Document attachments:")}</strong>
@@ -206,7 +206,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="id" fw=true}
+				{icon name="id"}
 			</td>
 			<td>
 				<strong>{trans("Number:")}</strong>
@@ -222,7 +222,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="confirm" fw=true}
+				{icon name="confirm"}
 			</td>
 			<td class="nobr">
 				<label for="closed">
