--- a/templates/default/document/documentgen.html
+++ b/templates/default/document/documentgen.html
@@ -38,7 +38,7 @@
 	<thead>
 		<tr>
 			<td>
-				{icon name="document" fw=true}
+				{icon name="document"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Title:")}</strong>
@@ -52,7 +52,7 @@
 	<tbody>
 		<tr>
 			<td>
-				{icon name="document" fw=true}
+				{icon name="document"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("First number:")}</strong>
@@ -67,7 +67,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="period" fw=true}
+				{icon name="period"}
 			</td>
 			<td>
 				<strong>{trans("Period:")}</strong>
@@ -85,7 +85,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="description" fw=true}
+				{icon name="description"}
 			</td>
 			<td>
 				<strong>{trans("Description:")}</strong>
@@ -97,7 +97,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="type" fw=true}
+				{icon name="type"}
 			</td>
 			<td>
 				<strong>{trans("Type:")}</strong>
@@ -116,7 +116,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="template" fw=true}
+				{icon name="template"}
 			</td>
 			<td>
 				<strong>{trans("Template:")}</strong>
@@ -133,7 +133,7 @@
 		</tr>
 		<tr id="document-file-row"{if !$document.type} style="display: none;"{/if}>
 			<td>
-				{icon name="import" fw=true}
+				{icon name="import"}
 			</td>
 			<td>
 				<strong>{trans("Files:")}</strong>
@@ -144,7 +144,7 @@
 		</tr>
 		<tr id="attachment-row"{if !$attachment_result} style="display: none;"{/if}>
 			<td>
-				{icon name="import" fw=true}
+				{icon name="import"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Document attachments:")}</strong>
@@ -155,7 +155,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="confirm" fw=true}
+				{icon name="confirm"}
 			</td>
 			<td class="nobr">
 				<label for="closed">
@@ -168,7 +168,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="customer" fw=true}
+				{icon name="customer"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Customers:")}</strong>
@@ -220,7 +220,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="ipnetwork" fw=true}
+				{icon name="ipnetwork"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Network:")}</strong>
@@ -237,7 +237,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="customergroup" fw=true}
+				{icon name="customergroup"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Group:")}</strong>
