--- a/templates/default/document/documentpromotions.html
+++ b/templates/default/document/documentpromotions.html
@@ -6,7 +6,7 @@
 	<thead>
 		<tr class="hand lmsbox-titlebar" data-lmsbox-content="documentpromotionpanel">
 			<td>
-				{icon name="money" fw=true}
+				{icon name="money"}
 				<strong>{trans("Promotion Schema:")}</strong>
 			</td>
 		</tr>
