--- a/templates/default/document/documentreference.html
+++ b/templates/default/document/documentreference.html
@@ -1,6 +1,6 @@
 {if $cid && $references}
 <td>
-    {icon name="document" fw=true}
+    {icon name="document"}
 </td>
 <td class="nobr">
     <strong>{trans("Reference document:")}</strong>
