--- a/templates/default/document/documentscanadd.html
+++ b/templates/default/document/documentscanadd.html
@@ -56,7 +56,7 @@
     <THEAD>
 	<TR>
 		<TD>
-			{icon name="document" fw=true}
+			{icon name="document"}
 		</TD>
 		<TD class="bold nobr" colspan="2">
 			{trans("Select files with document scans")}
