--- a/templates/default/document/documenttypeedit.html
+++ b/templates/default/document/documenttypeedit.html
@@ -14,7 +14,7 @@
 	<THEAD>
 	<TR>
 		<TD colspan="3" class="bold">
-			{icon name="document" fw=true}
+			{icon name="document"}
 			{trans("Name:")} {$documenttype.name}
 		</TD>
 	</TR>
@@ -22,7 +22,7 @@
 	<TBODY>
 	<TR>
 		<TD>
-			{icon name="permissions" fw=true}
+			{icon name="permissions"}
 		</TD>
 		<TD class="bold nobr">
 			{trans("Permissions:")}
