--- a/templates/default/event/eventlistheader.html
+++ b/templates/default/event/eventlistheader.html
@@ -1,18 +1,18 @@
 {block name=eventlistheader}
 <tr class="nobr bold">
     <td class="text-center" style="min-width: 70px;">
-        {icon name="type" label="Type:" fw=true}
+        {icon name="type" label="Type:"}
     </td>
     <td>
-        {icon name="uptime" label="Time:" fw=true}<br>
-        {icon name="user" label="User:" fw=true}
+        {icon name="uptime" label="Time:"}<br>
+        {icon name="user" label="User:"}
     </td>
     <td>
-        {icon name="subject" label="Title:" fw=true}<br>
-        {icon name="description" label="Description:" fw=true}
+        {icon name="subject" label="Title:"}<br>
+        {icon name="description" label="Description:"}
     </td>
     <td>
-        {icon name="customer" label="Customer:" fw=true}
+        {icon name="customer" label="Customer:"}
     </td>
     <td></td>
     <td class="text-right">
