--- a/templates/default/event/eventnote.html
+++ b/templates/default/event/eventnote.html
@@ -9,7 +9,7 @@
     {block name="event_note_table"}
 	<TR class="dark">
 		<TD width="1%" class="fleftu">
-			{icon name="calendar" fw=true}
+			{icon name="calendar"}
 		</TD>
 		<TD width="1%" class="fbt">
 			<B>{trans("Title:")}</B>
@@ -20,7 +20,7 @@
 	</TR>
 	<TR class="light">
 		<TD width="1%" class="fleft">
-			{icon name="callendar" fw=true}
+			{icon name="callendar"}
 		</TD>
 		<TD width="1%">
 			<B>{trans("Time:")}</B>
@@ -41,7 +41,7 @@
         {if $event.description}
 	<TR class="light">
 		<TD width="1%" class="fleft">
-			{icon name="description" fw=true}
+			{icon name="description"}
 		</TD>
 		<TD width="1%">
 			<B>{trans("Description:")}</B>
@@ -59,7 +59,7 @@
         {/if}
 	<TR class="light">
 		<TD width="1%" class="fleft">
-			{icon name="permissions" fw=true}
+			{icon name="permissions"}
 		</TD>
 		<TD width="1%">
 			<B>{trans("Status:")}</B>
@@ -70,7 +70,7 @@
 	</TR>
 	<TR class="light">
 		<TD width="1%" class="fleft">
-			{icon name="customer" fw=true}
+			{icon name="customer"}
 		</TD>
 		<TD width="1%">
 			<B>{trans("Customer:")}</B>
@@ -85,7 +85,7 @@
 	</TR>
 	<TR class="light">
 		<TD width="1%" class="fleft">
-			{icon name="note" fw=true}
+			{icon name="note"}
 		</TD>
 		<TD width="1%">
 			<B>{trans("Note:")}</B>
@@ -96,7 +96,7 @@
 	</TR>
 	<TR class="light">
 		<TD width="1%" class="fleft">
-			{icon name="user" fw=true}
+			{icon name="user"}
 		</TD>
 		<TD width="1%">
 			<B>{trans("Users:")}</B>
