--- a/templates/default/node/nodeaddbox.html
+++ b/templates/default/node/nodeaddbox.html
@@ -160,7 +160,7 @@
 
 							<tr>
 								<td>
-									{icon name="login" fw=true tip="<!node>Login"}
+									{icon name="login" tip="<!node>Login"}
 								</td>
 								<td>
 									<input type="text" name="nodedata[login]" value="{$nodedata.login|escape}"
@@ -170,7 +170,7 @@
 
 							<TR>
 								<TD>
-									{icon name="password" fw=true tip="Password:"}
+									{icon name="password" tip="Password:"}
 								</TD>
 								<TD>
 									<INPUT type="text" name="nodedata[passwd]" value="{$nodedata.passwd|escape}"
