--- a/templates/default/numberplan/numberplanadd.html
+++ b/templates/default/numberplan/numberplanadd.html
@@ -13,7 +13,7 @@
     <thead>
 		<TR>
 			<TD>
-				{icon name="id" fw=true}
+				{icon name="id"}
 			</TD>
 			<TD class="bold">
 				{trans("Template:")}
@@ -27,7 +27,7 @@
     <tbody>
 		<TR>
 			<TD>
-				{icon name="document" fw=true}
+				{icon name="document"}
 			</TD>
 			<TD class="bold nobr">
 				{trans("Document type:")}
@@ -43,7 +43,7 @@
 		</TR>
 		<TR>
 			<TD>
-				{icon name="calendar" fw=true}
+				{icon name="calendar"}
 			</TD>
 			<TD class="bold">
 				{trans("Period:")}
@@ -59,7 +59,7 @@
 		</TR>
 		<TR>
 			<TD class="valign-top">
-				{icon name="division" fw=true}
+				{icon name="division"}
 			</TD>
 			<TD class="bold nobr valign-top">
 				{trans("Division")}
@@ -76,7 +76,7 @@
 		</TR>
 		<TR>
 			<TD class="valign-top">
-				{icon name="user" fw=true}
+				{icon name="user"}
 			</TD>
 			<TD class="bold nobr valign-top">
 				{trans("User")}
@@ -93,7 +93,7 @@
 		</TR>
 		<TR>
 			<TD>
-				{icon name="option" fw=true}
+				{icon name="option"}
 			</TD>
 			<TD class="bold nobr">
 				<label for="numberplanadd_isdefault">{trans("Default:")}</label>
