--- a/templates/default/promotion/promotioninfobox.html
+++ b/templates/default/promotion/promotioninfobox.html
@@ -3,7 +3,7 @@
     <THEAD>
 	<TR>
 		<TD WIDTH="1%">
-			{icon name="money" fw=true}
+			{icon name="money"}
 		</TD>
 		<TD WIDTH="98%" COLSPAN="2">
 			<B>{$promotion.name} ({$promotion.id|string_format:"%04d"})</B>
@@ -27,7 +27,7 @@
 	{if $promotion.description}
 	<TR>
 		<TD WIDTH="1%">
-			{icon name="optional-info" fw=true}
+			{icon name="optional-info"}
 		</TD>
 		<TD WIDTH="98%" COLSPAN="2">
 			<TABLE WIDTH="100%" CELLPADDING="5">
