--- a/templates/default/promotion/promotionschemaedit.html
+++ b/templates/default/promotion/promotionschemaedit.html
@@ -33,7 +33,7 @@
 	<THEAD>
 	<TR>
 		<TD>
-			{icon name="money" fw=true}
+			{icon name="money"}
 		</TD>
 		<TD class="bold">
 			{trans("Name:")}
@@ -51,7 +51,7 @@
 	<TBODY>
 	<TR>
 		<TD>
-			{icon name="calendar" fw=true}
+			{icon name="calendar"}
 		</TD>
 		<TD class="bold">
 			{trans("Periods:")}
@@ -87,7 +87,7 @@
 	</TR>
 	<TR>
 		<TD>
-			{icon name="info" fw=true}
+			{icon name="info"}
 		</TD>
 		<TD class="bold">
 			{trans("Description:")}
