--- a/templates/default/rt/rtcategoryadd.html
+++ b/templates/default/rt/rtcategoryadd.html
@@ -14,7 +14,7 @@
 	<thead>
 		<tr>
 			<td>
-				{icon name="queue" fw=true}
+				{icon name="queue"}
 			</td>
 			<td>
 				<strong>{trans("Name:")}</strong>
@@ -28,7 +28,7 @@
 	<tbody class="lms-ui-multi-check">
 		<tr>
 			<td>
-				{icon name="optional-info" fw=true}
+				{icon name="optional-info"}
 			</td>
 			<td>
 				<strong>{trans("Description")}</strong>
@@ -40,7 +40,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="color" fw=true}
+				{icon name="color"}
 			</td>
 			<td>
 				<label for="background-style">
@@ -54,7 +54,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="color" fw=true}
+				{icon name="color"}
 			</td>
 			<td>
 				<label for="text-style">
@@ -68,7 +68,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="owner" fw=true}
+				{icon name="owner"}
 			</td>
 			<td>
 				<strong>{trans("Users:")}</strong>
