--- a/templates/default/tariff/tariffadd.html
+++ b/templates/default/tariff/tariffadd.html
@@ -41,7 +41,7 @@
 
 					<tr>
 						<td>
-							{icon name="value" fw=true}
+							{icon name="value"}
 						</td>
 						<td class="bold nobr">
 							{trans("Value:")}
@@ -65,7 +65,7 @@
 
 					<tr>
 						<td>
-							{icon name="document" fw=true}
+							{icon name="document"}
 						</td>
 						<td>
 							{trans("Reward/penalty for")}
