--- a/templates/default/taxrate/taxrateadd.html
+++ b/templates/default/taxrate/taxrateadd.html
@@ -14,7 +14,7 @@
 	<thead>
 		<tr>
 			<td>
-				{icon name="tax" fw=true}
+				{icon name="tax"}
 			</td>
 			<td>
 				<strong>{trans("Label:")}</strong>
@@ -28,7 +28,7 @@
 	<tbody>
 		<tr>
 			<td>
-				{icon name="cash" fw=true}
+				{icon name="cash"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Value:")}</strong>
@@ -40,7 +40,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="tax" fw=true}
+				{icon name="tax"}
 			</td>
 			<td>
 				<label for="taxing">
@@ -55,7 +55,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="tax" fw=true}
+				{icon name="tax"}
 			</td>
 			<td class="nobr">
 				<label for="reversecharge">
@@ -69,7 +69,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="calendar" fw=true}
+				{icon name="calendar"}
 			</td>
 			<td class="nobr">
 				<stromg>{trans("Binds from date:")}</stromg>
@@ -82,7 +82,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="calendar" fw=true}
+				{icon name="calendar"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Binds to date:")}</strong>
