--- a/templates/default/user/useradd.html
+++ b/templates/default/user/useradd.html
@@ -44,7 +44,7 @@
 	<thead>
 		<tr>
 			<td>
-				{icon name="login" fw=true}
+				{icon name="login"}
 				<strong>{trans("Login:")}</strong>
 			</td>
 			<td>
@@ -56,7 +56,7 @@
 	<tbody>
 		<tr>
 			<td class="nobr">
-				{icon name="user" fw=true}
+				{icon name="user"}
 				<strong>{trans("First name:")}</strong>
 			</td>
 			<td>
@@ -66,7 +66,7 @@
 		</tr>
 		<tr>
 			<td class="nobr">
-				{icon name="user" fw=true}
+				{icon name="user"}
 				<strong>{trans("Last name:")}</strong>
 			</td>
 			<td>
@@ -76,7 +76,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="document" fw=true}
+				{icon name="document"}
 				<strong>{trans("Issuer")}</strong>
 			</td>
 			<td>
@@ -86,7 +86,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="info" fw=true}
+				{icon name="info"}
 				<strong>{trans("Position:")}</strong>
 			</td>
 			<td>
@@ -96,7 +96,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="mail" fw=true}
+				{icon name="mail"}
 				<strong>{trans("E-mail:")}</strong>
 			</>
 			<td>
@@ -106,7 +106,7 @@
 		</tr>
 		<tr>
 			<td class="nobr">
-				{icon name="sms" fw=true}
+				{icon name="sms"}
 				<strong>{trans("Phone:")}</strong>
 			</td>
 			<td>
@@ -116,7 +116,7 @@
 		</tr>
 		<tr>
 			<td class="nobr">
-				{icon name="options" fw=true}
+				{icon name="options"}
 				<strong>{trans("Notification:")}</strong>
 			</td>
 			<td>
@@ -134,7 +134,7 @@
 		</tr>
 		<tr>
 			<td class="nobr">
-				{icon name="disconnected" fw=true}
+				{icon name="disconnected"}
 				<strong>{trans("Account active:")}</strong>
 			</td>
 			<td>
@@ -150,7 +150,7 @@
 		</tr>
 		<tr>
 			<td class="nobr">
-				{icon name="calendar" fw=true}
+				{icon name="calendar"}
 				<strong>{trans("Account active:")}</strong>
 			</td>
 			<td class="nobr">
@@ -166,7 +166,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="password" fw=true}
+				{icon name="password"}
 				<strong>{trans("Password:")}</strong>
 			</td>
 			<td>
@@ -175,7 +175,7 @@
 		</tr>
 		<tr>
 			<td class="nobr">
-				{icon name="password" fw=true}
+				{icon name="password"}
 				<strong>{trans("Repeat password:")}</strong>
 			</td>
 			<td>
@@ -185,7 +185,7 @@
 		<tr>
 			<td class="nobr">
 				<label for="passwdforcechange">
-					{icon name="password" fw=true}
+					{icon name="password"}
 					<strong>{trans("Force password change:")}</strong>
 				</label>
 			</td>
@@ -196,7 +196,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="password" fw=true}
+				{icon name="password"}
 				<strong>{trans("Two factor authentication:")}</strong>
 			</td>
 			<td>
@@ -216,7 +216,7 @@
 		</tr>
 		<tr id="twofactorauthsecretkey"{if $useradd.twofactorauth != 1} style="display: none;"{/if}>
 			<td>
-				{icon name="password" fw=true}
+				{icon name="password"}
 				<strong>{trans("Secret key:")}</strong>
 			</td>
 			<td>
@@ -226,7 +226,7 @@
 		</tr>
 		<tr>
 			<td class="nobr">
-				{icon name="ipnetwork" fw=true}
+				{icon name="ipnetwork"}
 				<strong>{trans("Allowed hosts:")}</strong>
 			</td>
 			<td>
@@ -236,7 +236,7 @@
 		</tr>
 		<tr>
 			<td class="nobr">
-				{icon name="password" fw=true}
+				{icon name="password"}
 				<strong>{trans("Password expiration:")}</strong>
 			</td>
 			<td>
@@ -249,7 +249,7 @@
 		</tr>
 		<tr>
 			<td class="nobr">
-				{icon name="permissions" fw=true}
+				{icon name="permissions"}
 				<strong>{trans("Access rights:")}</strong>
 			</td>
 			<td class="nobr">
@@ -304,7 +304,7 @@
 
 		<tr>
 			<td class="nobr">
-				{icon name="usergroup" fw=true}
+				{icon name="usergroup"}
 				<strong>{trans("User groups:")}</strong>
 			</td>
 			<td>
@@ -320,7 +320,7 @@
 
 		<tr>
 			<td class="nobr">
-				{icon name="customergroup" fw=true}
+				{icon name="customergroup"}
 				<strong>{trans("Customer groups:")}</strong>
 			</td>
 			<td>
@@ -337,7 +337,7 @@
 		{if is_array($divisions) && count($divisions)}
 			<tr>
 				<td class="nobr">
-					{icon name="division" fw=true}
+					{icon name="division"}
 					<strong>{trans("Divisions:")}</strong>
 				</td>
 				<td>
