--- a/templates/default/cash/cashsourceadd.html
+++ b/templates/default/cash/cashsourceadd.html
@@ -14,7 +14,7 @@
 	<thead>
 		<tr>
 			<td>
-				{icon name="cashsource" fw=true}
+				{icon name="cashsource"}
 			</td>
 			<td>
 				<strong>{trans("Name:")}</strong>
@@ -40,7 +40,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="info" fw=true}
+				{icon name="info"}
 			</td>
 			<td>
 				<strong>{trans("Description:")}</strong>
