--- a/templates/default/customer/customerbalancebox.html
+++ b/templates/default/customer/customerbalancebox.html
@@ -423,7 +423,7 @@
 							{trans("income/expense")}
 						</label>
 						<div class="servicetype">
-							{icon name="money" fw=true}
+							{icon name="money"}
 							<select id="servicetype" name="addbalance[servicetype]" form="addbalance-form" {tip text="Service type"}>
 								<option value="">{trans("- none -")}</option>
 								{foreach Localisation::arraySort($_SERVICETYPES) as $type => $label}
