--- a/templates/default/customer/customergroupadd.html
+++ b/templates/default/customer/customergroupadd.html
@@ -16,7 +16,7 @@
 	<thead>
 		<tr>
 			<td>
-				{icon name="customergroup" fw=true}
+				{icon name="customergroup"}
 			</td>
 			<td>
 				<strong>{trans("Name:")}</strong>
@@ -30,7 +30,7 @@
 	<tbody>
 		<tr>
 			<td>
-				{icon name="info" fw=true}
+				{icon name="info"}
 			</td>
 			<td>
 				<strong>{trans("Description:")}</strong>
