--- a/templates/default/division/divisionadd.html
+++ b/templates/default/division/divisionadd.html
@@ -24,7 +24,7 @@
 	<thead>
 		<tr>
 			<td>
-				{icon name="division" fw=true}
+				{icon name="division"}
 			</td>
 			<td>
 				<strong>{trans("Name:")}</strong>
@@ -38,7 +38,7 @@
 	<tbody>
 		<tr>
 			<td>
-				{icon name="division" fw=true}
+				{icon name="division"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Long name:")}</strong>
@@ -50,7 +50,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="label" fw=true}
+				{icon name="label"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Text label:")}</strong>
@@ -62,7 +62,7 @@
 		</tr>
 		<tr>
 			<td class="valign-top">
-				{icon name="user" fw=true}
+				{icon name="user"}
 			</td>
 			<td class="valign-top nobr">
 				<label for="natural-person">
@@ -95,7 +95,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="home" fw=true}
+				{icon name="home"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Address:")}</strong>
@@ -121,7 +121,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="id" fw=true}
+				{icon name="id"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("TEN")}</strong>
@@ -136,7 +136,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="tax" fw=true}
+				{icon name="tax"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Tax Office Code:")}</strong>
@@ -157,7 +157,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="id" fw=true}
+				{icon name="id"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("REGON")}</strong>
@@ -169,7 +169,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="id" fw=true}
+				{icon name="id"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("RBE Name:")}</strong>
@@ -182,7 +182,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="id" fw=true}
+				{icon name="id"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("RBE:")}</strong>
@@ -194,7 +194,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="phone" fw=true}
+				{icon name="phone"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Telecom number:")}</strong>
@@ -206,7 +206,7 @@
 		</tr>
 		<tr>
 			<td class="valign-top">
-				{icon name="account-number" fw=true}
+				{icon name="account-number"}
 			</td>
 			<td class="nobr valign-top">
 				<strong>{trans("Bank account:")}</strong>
@@ -223,7 +223,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="mail" fw=true}
+				{icon name="mail"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Email:")}</strong>
@@ -235,7 +235,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="phone" fw=true}
+				{icon name="phone"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Phone")}</strong>
@@ -247,7 +247,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="info" fw=true}
+				{icon name="info"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Description:")}</strong>
@@ -259,7 +259,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="print" fw=true}
+				{icon name="print"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Invoice header:")}</strong>
@@ -271,7 +271,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="print" fw=true}
+				{icon name="print"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Invoice footer:")}</strong>
@@ -283,7 +283,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="signature" fw=true}
+				{icon name="signature"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Invoice author:")}</strong>
@@ -295,7 +295,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="map-pin" fw=true}
+				{icon name="map-pin"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Invoice creation place:")}</strong>
@@ -307,7 +307,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="paytype" fw=true}
+				{icon name="paytype"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Payment type:")}</strong>
@@ -323,7 +323,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="deadline" fw=true}
+				{icon name="deadline"}
 			</td>
 			<td>
 				<strong>{trans("Deadline:")}</strong>
@@ -342,7 +342,7 @@
 		</tr>
 		<tr>
 			<td class="bold nobr">
-				{icon name="user" fw=true}
+				{icon name="user"}
 			</td>
 			<td>
 				<strong>{trans("Users:")}</strong>
