--- a/templates/default/document/documenttypes.html
+++ b/templates/default/document/documenttypes.html
@@ -6,7 +6,7 @@
 <TABLE class="lmsbox lms-ui-background-cycle">
     <THEAD>
 	<TR>
-		<TD width="99%" NOWRAP>{icon name="document" fw=true} <B>{trans("Name:")}</B></TD>
+		<TD width="99%" NOWRAP>{icon name="document"} <B>{trans("Name:")}</B></TD>
 		<TD width="1%"></TD>
 	</TR>
 	{if $listdata.total != 0}
@@ -21,7 +21,7 @@
 	{foreach from=$typelist key=key item=item}
 	<TR class="highlight">
 		<TD NOWRAP onClick="return self.location.href='?m=documenttypeedit&amp;id={$key}';">
-			{icon name="document" fw=true} <B>{$item}</B>
+			{icon name="document"} <B>{$item}</B>
 		</TD>
 		<TD align="right" NOWRAP>
 			{button type="link" icon="edit" tip="{trans("Edit")}" href="?m=documenttypeedit&amp;id={$key}"}
