--- a/templates/default/node/nodeeditbox.html
+++ b/templates/default/node/nodeeditbox.html
@@ -186,7 +186,7 @@
 
 								<tr>
 									<td>
-										{icon name="login" fw=true}
+										{icon name="login"}
 									</td>
 									<td>
 										{trans("<!node>Login")}
@@ -199,7 +199,7 @@
 
 								<tr>
 									<td>
-										{icon name="password" fw=true}
+										{icon name="password"}
 									</td>
 									<td>
 										{trans("Password:")}
