--- a/templates/default/numberplan/numberplanlist.html
+++ b/templates/default/numberplan/numberplanlist.html
@@ -29,7 +29,7 @@
     <THEAD>
 		<TR>
 			<TD class="bold nobr">
-				{icon name="id" fw=true}
+				{icon name="id"}
 				{trans("Template:")}
 			</TD>
 			<TD class="text-right nobr">{trans("ID:")}</TD>
@@ -94,15 +94,15 @@
 		{foreach $numberplanlist as $plan}
 		<TR class="highlight {if ($plan.validfrom !=0 && $plan.validfrom > $smarty.now) || ($plan.validto !=0 && $plan.validto < $smarty.now)} blend{/if}" data-name="{$plan.template}">
 			<TD class="bold nobr" data-target-url="?m=numberplanedit&id={$plan.id}">
-				{icon name="id" fw=true}
+				{icon name="id"}
 				{$plan.template}
 				{if !empty($plan.divisions)}
 					{capture assign="tip"}{foreach $plan.divisions as $division}{if !$division@first}<br>{/if}{$division.shortname|escape|escape}{/foreach}{/capture}
-					{icon name="division" fw=true tip=$tip}
+					{icon name="division" tip=$tip}
 				{/if}
 				{if !empty($plan.users)}
 					{capture assign="tip"}{foreach $plan.users as $user}{if !$user@first}<br>{/if}{$user.rname|escape|escape} ({$user.login|escape|escape}){/foreach}{/capture}
-					{icon name="user" fw=true tip=$tip}
+					{icon name="user" tip=$tip}
 				{/if}
 			</TD>
 			<TD class="text-right nobr" data-target-url="?m=numberplanedit&id={$plan.id}">
