--- a/templates/default/rt/rtcategoryedit.html
+++ b/templates/default/rt/rtcategoryedit.html
@@ -14,7 +14,7 @@
 	<thead>
 		<tr>
 			<td>
-				{icon name="queue" fw=true}
+				{icon name="queue"}
 			</td>
 			<td>
 				<strong>{trans("Name:")}</strong>
@@ -29,7 +29,7 @@
 	<tbody>
 		<tr>
 			<td>
-				{icon name="description" fw=true}
+				{icon name="description"}
 			</td>
 			<td>
 				<strong>{trans("Description:")}</strong>
@@ -41,7 +41,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="color" fw=true}
+				{icon name="color"}
 			</td>
 			<td>
 				<label for="background-style">
@@ -55,7 +55,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="color" fw=true}
+				{icon name="color"}
 			</td>
 			<td>
 				<label for="text-style">
@@ -69,7 +69,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="user" fw=true}
+				{icon name="user"}
 			</td>
 			<td>
 				<strong>{trans("Users:")}</strong>
