--- a/templates/default/rt/rtheader.html
+++ b/templates/default/rt/rtheader.html
@@ -1,7 +1,7 @@
 {block name="rtheader"}
 <TR class="lms-ui-header-panel" {tip text="Click on column name to change sorting order"}>
     <TD class="bold">
-        {icon name="status" fw=true tip="Unread"}
+        {icon name="status" tip="Unread"}
     </TD>
     <TD class="bold">
         {trans("Ticket's state:")}
@@ -17,25 +17,25 @@
         {/if}
     </TD>
     <TD class="nobr bold">
-        {icon name="service" label="Service type:" fw=true}<br>
-        {icon name="type" label="<!rtheader>Ticket type:" fw=true}
+        {icon name="service" label="Service type:"}<br>
+        {icon name="type" label="<!rtheader>Ticket type:"}
     </TD>
     <TD class="nobr bold">
-        {icon name="helpdesk" fw=true} <a href="?m={$layout.module}{if isset($filter.custid)}&id={$filter.custid}{/if}{if !empty($filter.ids)}&id[]={implode('&id[]=', $filter.ids)}{/if}{if $filter.state == -1}&s=-1{elseif !empty($filter.state) && is_array($filter.state)}&s[]={implode('&s[]=', $filter.state)}{/if}&o=subject{if $filter.direction == "asc" && $filter.order == "subject"},desc{/if}">{trans("Subject:")}</a> {if $filter.order == "subject"}<i class="lms-ui-icon-{if $filter.direction == 'desc'}descending{else}ascending{/if}"></i>{/if}<br>
-        {icon name="customer" fw=true} <a href="?m={$layout.module}{if isset($filter.custid)}&id={$filter.custid}{/if}{if !empty($filter.ids)}&id[]={implode('&id[]=', $filter.ids)}{/if}{if $filter.state == -1}&s=-1{elseif !empty($filter.state) && is_array($filter.state)}&s[]={implode('&s[]=', $filter.state)}{/if}&o=requestor{if $filter.direction == "asc" && $filter.order == "requestor"},desc{/if}">{trans("Submitter:")}</a> {if $filter.order == "requestor"}<i class="lms-ui-icon-{if $filter.direction == 'desc'}descending{else}ascending{/if}"></i>{/if}
+        {icon name="helpdesk"} <a href="?m={$layout.module}{if isset($filter.custid)}&id={$filter.custid}{/if}{if !empty($filter.ids)}&id[]={implode('&id[]=', $filter.ids)}{/if}{if $filter.state == -1}&s=-1{elseif !empty($filter.state) && is_array($filter.state)}&s[]={implode('&s[]=', $filter.state)}{/if}&o=subject{if $filter.direction == "asc" && $filter.order == "subject"},desc{/if}">{trans("Subject:")}</a> {if $filter.order == "subject"}<i class="lms-ui-icon-{if $filter.direction == 'desc'}descending{else}ascending{/if}"></i>{/if}<br>
+        {icon name="customer"} <a href="?m={$layout.module}{if isset($filter.custid)}&id={$filter.custid}{/if}{if !empty($filter.ids)}&id[]={implode('&id[]=', $filter.ids)}{/if}{if $filter.state == -1}&s=-1{elseif !empty($filter.state) && is_array($filter.state)}&s[]={implode('&s[]=', $filter.state)}{/if}&o=requestor{if $filter.direction == "asc" && $filter.order == "requestor"},desc{/if}">{trans("Submitter:")}</a> {if $filter.order == "requestor"}<i class="lms-ui-icon-{if $filter.direction == 'desc'}descending{else}ascending{/if}"></i>{/if}
     </TD>
     <TD class="bold ticket-location">
-        {icon name="location" fw=true} <a href="?m={$layout.module}{if isset($filter.custid)}&id={$filter.custid}{/if}{if !empty($filter.ids)}&id[]={implode('&id[]=', $filter.ids)}{/if}{if $filter.state == -1}&s=-1{elseif !empty($filter.state) && is_array($filter.state)}&s[]={implode('&s[]=', $filter.state)}{/if}&o=location{if $filter.direction == "asc" && $filter.order == "location"},desc{/if}">{trans("Location:")}</a>{if $filter.order == "location"}<i class="lms-ui-icon-{if $filter.direction == 'desc'}descending{else}ascending{/if}"></i>{/if}
+        {icon name="location"} <a href="?m={$layout.module}{if isset($filter.custid)}&id={$filter.custid}{/if}{if !empty($filter.ids)}&id[]={implode('&id[]=', $filter.ids)}{/if}{if $filter.state == -1}&s=-1{elseif !empty($filter.state) && is_array($filter.state)}&s[]={implode('&s[]=', $filter.state)}{/if}&o=location{if $filter.direction == "asc" && $filter.order == "location"},desc{/if}">{trans("Location:")}</a>{if $filter.order == "location"}<i class="lms-ui-icon-{if $filter.direction == 'desc'}descending{else}ascending{/if}"></i>{/if}
     </TD>
     <TD class="nobr bold text-center ticket-deadline">
-        {icon name="deadline" fw=true} <a href="?m={$layout.module}{if isset($filter.custid)}&id={$filter.custid}{/if}{if !empty($filter.ids)}&id[]={implode('&id[]=', $filter.ids)}{/if}{if $filter.state == -1}&s=-1{elseif !empty($filter.state) && is_array($filter.state)}&s[]={implode('&s[]=', $filter.state)}{/if}&o=deadline{if $filter.direction == "asc" && $filter.order == "deadline"},desc{/if}">{trans("<!rtheader>Deadline:")}</a>{if $filter.order == "deadline"}<i class="lms-ui-icon-{if $filter.direction == 'desc'}descending{else}ascending{/if}"></i>{/if}
+        {icon name="deadline"} <a href="?m={$layout.module}{if isset($filter.custid)}&id={$filter.custid}{/if}{if !empty($filter.ids)}&id[]={implode('&id[]=', $filter.ids)}{/if}{if $filter.state == -1}&s=-1{elseif !empty($filter.state) && is_array($filter.state)}&s[]={implode('&s[]=', $filter.state)}{/if}&o=deadline{if $filter.direction == "asc" && $filter.order == "deadline"},desc{/if}">{trans("<!rtheader>Deadline:")}</a>{if $filter.order == "deadline"}<i class="lms-ui-icon-{if $filter.direction == 'desc'}descending{else}ascending{/if}"></i>{/if}
     </TD>
     <TD class="nobr bold">
-        {icon name="user" fw=true} <a href="?m={$layout.module}{if isset($filter.custid)}&id={$filter.custid}{/if}{if !empty($filter.ids)}&id[]={implode('&id[]=', $filter.ids)}{/if}{if $filter.state == -1}&s=-1{elseif !empty($filter.state) && is_array($filter.state)}&s[]={implode('&s[]=', $filter.state)}{/if}&o=owner{if $filter.direction == "asc" && $filter.order == "owner"},desc{/if}">{trans("Owner:")}</a>{if $filter.order == "owner"}<i class="lms-ui-icon-{if $filter.direction == 'desc'}descending{else}ascending{/if}"></i>{/if}<br>
-        {icon name="modify" fw=true} <a href="?m={$layout.module}{if isset($filter.custid)}&id={$filter.custid}{/if}{if !empty($filter.ids)}&id[]={implode('&id[]=', $filter.ids)}{/if}{if $filter.state == -1}&s=-1{elseif !empty($filter.state) && is_array($filter.state)}&s[]={implode('&s[]=', $filter.state)}{/if}&o=lastmodified{if $filter.direction == "asc" && $filter.order == "lastmodified"},desc{/if}">{trans("Modified:")}</a> {if $filter.order == "lastmodified"}<i class="lms-ui-icon-{if $filter.direction == 'desc'}descending{else}ascending{/if}"></i>{/if}
+        {icon name="user"} <a href="?m={$layout.module}{if isset($filter.custid)}&id={$filter.custid}{/if}{if !empty($filter.ids)}&id[]={implode('&id[]=', $filter.ids)}{/if}{if $filter.state == -1}&s=-1{elseif !empty($filter.state) && is_array($filter.state)}&s[]={implode('&s[]=', $filter.state)}{/if}&o=owner{if $filter.direction == "asc" && $filter.order == "owner"},desc{/if}">{trans("Owner:")}</a>{if $filter.order == "owner"}<i class="lms-ui-icon-{if $filter.direction == 'desc'}descending{else}ascending{/if}"></i>{/if}<br>
+        {icon name="modify"} <a href="?m={$layout.module}{if isset($filter.custid)}&id={$filter.custid}{/if}{if !empty($filter.ids)}&id[]={implode('&id[]=', $filter.ids)}{/if}{if $filter.state == -1}&s=-1{elseif !empty($filter.state) && is_array($filter.state)}&s[]={implode('&s[]=', $filter.state)}{/if}&o=lastmodified{if $filter.direction == "asc" && $filter.order == "lastmodified"},desc{/if}">{trans("Modified:")}</a> {if $filter.order == "lastmodified"}<i class="lms-ui-icon-{if $filter.direction == 'desc'}descending{else}ascending{/if}"></i>{/if}
     </TD>
     <TD class="nobr bold ticket-events">
-        {icon name="timetable" label="Events:" fw=true}
+        {icon name="timetable" label="Events:"}
     </TD>
     <TD></TD>
 </TR>
