--- a/templates/default/rt/rtnoteadd.html
+++ b/templates/default/rt/rtnoteadd.html
@@ -17,7 +17,7 @@
     <THEAD>
 	<TR>
 		<TD colspan="2" class="bold nobr">
-			{icon name="helpdesk" fw=true}
+			{icon name="helpdesk"}
 			{t a=$note.ticketid|string_format:"%06d"}Ticket No. $a{/t}
 		</TD>
 	</TR>
@@ -25,7 +25,7 @@
     <TBODY>
 	<TR id="note-template-row"{if empty($notetemplates)} style="display: none;"{/if}>
 		<TD class="bold nobr">
-			{icon name="document" fw=true}
+			{icon name="document"}
 			{trans("Note template:")}
 		</TD>
 		<td id="note-templates">
@@ -34,7 +34,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="note" fw=true}
+			{icon name="note"}
 			{trans("Note content:")}
 		</TD>
 		<TD>
@@ -43,7 +43,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr valign-top">
-			{icon name="upload" fw=true}
+			{icon name="upload"}
 			{trans("Attachments:")}
 		</TD>
 		<TD>
@@ -67,7 +67,7 @@
     <TBODY>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="mail" fw=true}
+			{icon name="mail"}
 			<label for="notify"> {trans("Notify users:")}</label>
 		</TD>
 		<TD>
@@ -76,7 +76,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="status" fw=true}
+			{icon name="status"}
 			{trans("Status:")}
 		</TD>
 		<TD>
@@ -94,7 +94,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="cause" fw=true}
+			{icon name="cause"}
 			{trans("Cause:")}
 		</TD>
 		<TD>
@@ -107,7 +107,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="source" fw=true}
+			{icon name="source"}
 			{trans("Ticket source:")}
 		</TD>
 		<TD>
@@ -120,7 +120,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="priority" fw=true}
+			{icon name="priority"}
 			{trans("Priority:")}
 		</TD>
 		<TD>
@@ -134,7 +134,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="queue" fw=true}
+			{icon name="queue"}
 			{trans("Queue:")}
 		</TD>
 		<TD>
@@ -147,7 +147,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="owner" fw=true}
+			{icon name="owner"}
 			{trans("Owner:")}
 		</TD>
 		<TD>
@@ -170,7 +170,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="verifier" fw=true}
+			{icon name="verifier"}
 			{trans("Verifier:")}
 		</TD>
 		<TD>
@@ -193,7 +193,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="deadline" fw=true}
+			{icon name="deadline"}
 			{trans("<!rt>Deadline:")}
 		</TD>
 		<TD>
@@ -209,7 +209,7 @@
 
 	<TR>
 		<td class="bold nobr">
-			{icon name="queue" fw=true}
+			{icon name="queue"}
 			{trans("Category changes:")}
 		</td>
 		<td>
@@ -224,7 +224,7 @@
 
 	<TR id="categories">
 		<td class="bold nobr">
-			{icon name="categories" fw=true}
+			{icon name="categories"}
 			{trans("Categories:")}
 		</td>
 		<td>
