--- a/templates/default/rt/rtqueueinfo.html
+++ b/templates/default/rt/rtqueueinfo.html
@@ -12,7 +12,7 @@
     <THEAD>
 	<TR>
 	    <TD>
-		{icon name="queue" fw=true}
+		{icon name="queue"}
 	    </TD>
 	    <TD class="bold" colspan="2">{$queue.name} ({$queue.id|string_format:"%04d"})</TD>
 	</TR>
@@ -21,7 +21,7 @@
 	{if $queue.email}
 	<TR>
 	    <TD>
-		{icon name="mail" fw=true}
+		{icon name="mail"}
 	    </TD>
 	    <TD class="bold">{trans("E-mail:")}</TD>
 	    <TD>{$queue.email}</TD>
@@ -30,7 +30,7 @@
 	{if $queue.description}
 	<TR>
 	    <TD>
-		{icon name="description" fw=true}
+		{icon name="description"}
 	    </TD>
 	    <TD class="bold">
 			{trans("Description:")}
@@ -48,7 +48,7 @@
 	{/if}
 	<TR>
 		<TD>
-			{icon name="verifier" fw=true}
+			{icon name="verifier"}
 		</TD>
 		<TD class="bold">{trans("<!rt>Verifier:")}</TD>
 		<TD>
@@ -61,7 +61,7 @@
 	</TR>
 	<TR>
 	    <TD>
-		{icon name="user" fw=true}
+		{icon name="user"}
 	    </TD>
 	    <TD class="bold">{trans("Privileges:")}</TD>
 	    <TD>
@@ -91,7 +91,7 @@
 						</TD>
 						{foreach $_RT_RIGHTS as $rightvalue => $label}
 						<TD class="text-center">
-							{if ($right.rights & $rightvalue) == $rightvalue}{icon name="permissions" fw=true}{/if}
+							{if ($right.rights & $rightvalue) == $rightvalue}{icon name="permissions"}{/if}
 						</TD>
 						{/foreach}
 					</TR>
@@ -104,7 +104,7 @@
 	{if !empty($queue.categories)}
 	<TR>
 		<TD>
-			{icon name="queue" fw=true}
+			{icon name="queue"}
 		</TD>
 		<TD class="bold nobr">
 			{trans("Default categories:")}
@@ -119,7 +119,7 @@
 	{if $queue.newticketsubject}
 	<TR>
 		<TD>
-			{icon name="mail" fw=true}
+			{icon name="mail"}
 		</TD>
 		<TD class="bold nobr">{trans("New ticket customer notification subject")}</TD>
 		<TD>
@@ -130,7 +130,7 @@
 	{if $queue.newticketbody}
 	<TR>
 		<TD>
-			{icon name="edit" fw=true}
+			{icon name="edit"}
 		</TD>
 		<TD class="bold nobr">{trans("New ticket customer notification body")}</TD>
 		<TD>
@@ -147,7 +147,7 @@
 	{if $queue.newmessagesubject}
 	<TR>
 		<TD>
-			{icon name="mail" fw=true}
+			{icon name="mail"}
 		</TD>
 		<TD class="bold nobr">{trans("New message customer notification subject")}</TD>
 		<TD>
@@ -158,7 +158,7 @@
 	{if $queue.newmessagebody}
 	<TR>
 		<TD>
-			{icon name="edit" fw=true}
+			{icon name="edit"}
 		</TD>
 		<TD class="bold nobr">{trans("New message customer notification body")}</TD>
 		<TD>
@@ -175,7 +175,7 @@
 	{if $queue.resolveticketsubject}
 	<TR>
 		<TD style="width: 1%;">
-			{icon name="mail" fw=true}
+			{icon name="mail"}
 		</TD>
 		<TD class="bold nobr">{trans("Resolve ticket customer notification subject:")}</TD>
 		<TD>
@@ -186,7 +186,7 @@
 	{if $queue.resolveticketbody}
 	<TR>
 		<TD>
-			{icon name="edit" fw=true}
+			{icon name="edit"}
 		</TD>
 		<TD class="bold nobr">{trans("Resolve ticket customer notification body:")}</TD>
 		<TD>
@@ -203,7 +203,7 @@
 	{if $queue.verifierticketsubject}
 	<TR>
 		<TD>
-			{icon name="edit" fw=true}
+			{icon name="edit"}
 		</TD>
 		<TD class="bold nobr">{trans("Ticket verifier notification subject:")}</TD>
 		<TD>
@@ -220,7 +220,7 @@
 	{if $queue.verifierticketbody}
 	<TR>
 		<TD>
-			{icon name="edit" fw=true}
+			{icon name="edit"}
 		</TD>
 		<TD class="bold nobr">{trans("Ticket verifier notification body:")}</TD>
 		<TD>
