--- a/templates/default/rt/rtqueuemodify.html
+++ b/templates/default/rt/rtqueuemodify.html
@@ -288,7 +288,7 @@
 		<div class="lms-ui-box-row">
 			<div class="lms-ui-box-field single-line">
 				<label for="queue-name">
-					{icon name="queue" fw=true}
+					{icon name="queue"}
 					<strong>{trans("Name")}</strong>
 				</label>
 				<input type="text" name="queue[name]" value="{$queue.name}"
@@ -305,7 +305,7 @@
 			<div class="lms-ui-box-row">
 				<div class="lms-ui-box-field">
 					<div class="lms-ui-box-field-label">
-						{icon name="mail" fw=true}
+						{icon name="mail"}
 						<strong>{trans("E-mail")}</strong>
 					</div>
 					<input type="email" name="queue[email]" form="queue-form"
@@ -316,7 +316,7 @@
 			<div class="lms-ui-box-row">
 				<div class="lms-ui-box-field">
 					<div class="lms-ui-box-field-label">
-						{icon name="description" fw=true}
+						{icon name="description"}
 						<strong>{trans("Description")}</strong>
 					</div>
 					<textarea name="queue[description]" rows="1" id="queue-description" form="queue-form"
@@ -327,7 +327,7 @@
 			<div class="lms-ui-box-row">
 				<div class="lms-ui-box-field">
 					<div class="lms-ui-box-field-label">
-						{icon name="verifier" fw=true}
+						{icon name="verifier"}
 						<strong>{trans("<!rt>Verifier")}</strong>
 					</div>
 					<select size="1" id="queue-verifierid" form="queue-form" class="lms-ui-box-field-value"
@@ -344,7 +344,7 @@
 			<div class="lms-ui-box-row">
 				<div class="lms-ui-box-field">
 					<label class="lms-ui-box-field-label">
-						{icon name="queue" fw=true}
+						{icon name="queue"}
 						<strong>{trans("Default categories")}</strong>
 						<input type="checkbox" id="checkall">
 					</label>
@@ -357,7 +357,7 @@
 			<div class="lms-ui-box-row">
 				<div class="lms-ui-box-field">
 					<div class="lms-ui-box-field-label">
-						{icon name="user" fw=true}
+						{icon name="user"}
 						<strong>{trans("Permissions")}</strong>
 					</div>
 					<div class="lms-ui-box-field-value lms-ui-box-nested-box lms-ui-background-cycle">
@@ -420,7 +420,7 @@
 			<div class="lms-ui-box-row">
 				<fieldset>
 					<legend>
-						{icon name="notifications" fw=true}
+						{icon name="notifications"}
 						<strong>{trans("Customer notifications")}</strong>
 					</legend>
 					<div id="notification-tabs">
@@ -604,7 +604,7 @@
 			<div class="lms-ui-box-row">
 				<fieldset>
 					<legend>
-						{icon name="verifier" fw=true}
+						{icon name="verifier"}
 						<strong>{trans("Verifier notifications")}</strong>
 					</legend>
 					<div id="verifier-notifications" class="lms-ui-box">
