--- a/templates/default/rt/rtticketinfobox.html
+++ b/templates/default/rt/rtticketinfobox.html
@@ -17,7 +17,7 @@
 	<THEAD>
 	<TR>
 		<TD style="width: 100%;" class="bold" colspan="3">
-			{icon name="helpdesk" fw=true label="{t}Ticket No.{/t} {$ticket.ticketid|string_format:"%06d"}"}
+			{icon name="helpdesk" label="{t}Ticket No.{/t} {$ticket.ticketid|string_format:"%06d"}"}
 		</TD>
 	</TR>
 	</THEAD>
@@ -47,7 +47,7 @@
 						<TABLE>
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									{icon name="subject" label="Subject:" fw=true}
+									{icon name="subject" label="Subject:"}
 								</TD>
 								<TD style="width: 99%;" class="nobr">
 									{$ticket.subject|trunescape:50}
@@ -56,7 +56,7 @@
 							{if $ticket.service != SERVICE_OTHER}
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									{icon name="service" label="Service type:" fw=true}
+									{icon name="service" label="Service type:"}
 								</TD>
 								<TD style="width: 99%;" class="nobr">
                                     {$_SERVICETYPES[$ticket.service]}
@@ -66,7 +66,7 @@
 							{if $ticket.type != RT_TYPE_OTHER}
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									{icon name="type" label="Ticket type:" fw=true}
+									{icon name="type" label="Ticket type:"}
 								</TD>
 								<TD style="width: 99%;" class="nobr">
                                     {trans($_RT_TYPES[$ticket.type].label)}
@@ -76,7 +76,7 @@
 							{if $ticket.customerid}
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									{icon name="customer" label="Customer:" fw=true}
+									{icon name="customer" label="Customer:"}
 								</TD>
 								<TD style="width: 99%;" class="nobr">
 									<A href="?m=customerinfo&id={$ticket.customerid}">{$ticket.customername|escape} (#{$ticket.customerid})</A>
@@ -86,7 +86,7 @@
 							{if $ticket.requestor_userid || $ticket.requestor_name || $ticket.requestor_mail || $ticket.requestor_phone}
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									{icon name="requestor" label="Requestor:" fw=true}
+									{icon name="requestor" label="Requestor:"}
 								</TD>
 								<TD style="width: 99%;" class="nobr">
 									{if $ticket.requestor_userid}
@@ -105,7 +105,7 @@
 							{/if}
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									{icon name="timetable" label="Create time:" fw=true}
+									{icon name="timetable" label="Create time:"}
 								</TD>
 								<TD style="width: 99%;">
 									{$ticket.createtime|date_format:"%Y/%m/%d %H:%M:%S"}
@@ -114,7 +114,7 @@
 							{if $ticket.creatorid}
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									{icon name="user" label="Created by:" fw=true}
+									{icon name="user" label="Created by:"}
 								</TD>
 								<TD style="width: 99%;">
 									<A href="?m=userinfo&amp;id={$ticket.creatorid}">{$ticket.creator|escape}</a>
@@ -123,7 +123,7 @@
 							{/if}
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									{icon name="uptime" label="Uptime:" fw=true}
+									{icon name="uptime" label="Uptime:"}
 								</TD>
 								<TD style="width: 99%;">
 									{$ticket.uptime}
@@ -132,7 +132,7 @@
 							{if !empty($ticket.categories)}
 							<TR>
 								<TD style="width: 1%;" class="valign-top bold nobr">
-									{icon name="categories" label="Categories:" fw=true}
+									{icon name="categories" label="Categories:"}
 								</TD>
 								<TD style="width: 99%;" class="nobr">
 									{foreach from=$categories item=category}
@@ -149,7 +149,7 @@
 						<TABLE>
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									{icon name="owner" label="Owner:" fw=true}
+									{icon name="owner" label="Owner:"}
 								</TD>
 								<TD style="width: 99%;">
 									{if $ticket.owner}
@@ -161,7 +161,7 @@
 							</TR>
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									{icon name="verifier" label="Verifier:" fw=true}
+									{icon name="verifier" label="Verifier:"}
 								</TD>
 								<TD style="width: 99%;">
 									{if $ticket.verifierid}
@@ -174,7 +174,7 @@
 							{if $ticket.deadline}
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									{icon name="timetable" label="<!rt>Deadline:" fw=true}
+									{icon name="timetable" label="<!rt>Deadline:"}
 								</TD>
 								<TD style="width: 99%;">
 									{if $ticket.deadline}
@@ -187,7 +187,7 @@
 							{/if}
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									{icon name="queue" label="Queue:" fw=true}
+									{icon name="queue" label="Queue:"}
 								</TD>
 								<TD style="width: 99%;">
 									<A href="?m=rtqueueview&amp;id={$ticket.queueid}">{$ticket.queuename}</A>
@@ -195,7 +195,7 @@
 							</TR>
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									{icon name="status" label="Status:" fw=true}
+									{icon name="status" label="Status:"}
 								</TD>
 								<TD style="width: 99%;">
 									{$_RT_STATES[$ticket.state].label}
@@ -204,7 +204,7 @@
 							{if $ticket.cause}
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									{icon name="cause" label="Cause:" fw=true}
+									{icon name="cause" label="Cause:"}
 								</TD>
 								<TD style="width: 99%;">
 									{if $ticket.cause==2}{trans("company's side")}
@@ -216,7 +216,7 @@
 							{if $ticket.deleted == 1 && (ConfigHelper::checkPrivilege('helpdesk_advanced_operations'))}
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									{icon name="user" label="Remover:" fw=true}
+									{icon name="user" label="Remover:"}
 								</TD>
 								<TD style="width: 99%;">
 									<A href="?m=userinfo&id={$ticket.deluserid}">{$ticket.delusername|escape}</A>
@@ -224,7 +224,7 @@
 							</TR>
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									{icon name="remove" label="Remove date:" fw=true}
+									{icon name="remove" label="Remove date:"}
 								</TD>
 								<TD style="width: 99%;">
 									{$ticket.deltime|date_format:"%Y/%m/%d %H:%M.%S"}
@@ -234,7 +234,7 @@
 							{if $ticket.source}
 							<TR>
 								<TD class="bold nobr">
-									{icon name="source" fw=true label="Ticket source:"}
+									{icon name="source" label="Ticket source:"}
 								</TD>
 								<TD>
 									{$_RT_SOURCES[$ticket.source]}
@@ -244,7 +244,7 @@
 							{if isset($ticket.priority)}
 							<TR>
 								<TD class="bold nobr">
-									{icon name="priority" fw=true label="Priority:"}
+									{icon name="priority" label="Priority:"}
 								</TD>
 								<TD>
 									<span style="{$_RT_PRIORITY_STYLES[$ticket.priority]}">{$_RT_PRIORITIES[$ticket.priority]}</span>
@@ -254,7 +254,7 @@
 							{if $ticket.address_id}
 							<TR>
 								<TD class="bold nobr">
-									{icon name="location" fw=true label="Location:"}
+									{icon name="location" label="Location:"}
 								</TD>
 								<TD>
 									{$ticket.location|escape}
@@ -264,7 +264,7 @@
 							{if $ticket.nodeid}
 							<TR>
 								<TD class="bold nobr">
-									{icon name="node" fw=true labe="Node:"}
+									{icon name="node" labe="Node:"}
 								</TD>
 								<TD>
 									<a href="?m=nodeinfo&id={$ticket.nodeid}">
@@ -276,7 +276,7 @@
 							{if $ticket.netnodeid}
 							<TR>
 								<TD class="bold nobr">
-									{icon name="netnode" fw=true label="Network Device Node:"}
+									{icon name="netnode" label="Network Device Node:"}
 								</TD>
 								<TD>
 									<A href="?m=netnodeinfo&id={$ticket.netnodeid}">{$ticket.netnode_name|escape}</A>
@@ -286,7 +286,7 @@
 							{if $ticket.netdevid}
 							<TR>
 								<TD class="bold nobr">
-									{icon name="netdev" fw=true label="Device:"}
+									{icon name="netdev" label="Device:"}
 								</TD>
 								<TD>
 									<A href="?m=netdevinfo&id={$ticket.netdevid}">{$ticket.netdev_name|escape}</A>
@@ -296,7 +296,7 @@
 							{if $ticket.invprojectid}
 							<TR>
 								<TD class="bold nobr">
-									{icon name="invproject" label="Investment project:" fw=true}
+									{icon name="invproject" label="Investment project:"}
 								</TD>
 								<TD>
 									{$ticket.invproject_name|escape}</A>
@@ -306,7 +306,7 @@
 							{if $ticket.parentid}
 							<TR>
 								<TD class="bold">
-									{icon name="parentticket" label="Parent ticket:" fw=true}
+									{icon name="parentticket" label="Parent ticket:"}
 								</TD>
 								<TD>
 									#{$ticket.parent.id|string_format:"%06d"} <a href="?m=rtticketview&id={$ticket.parent.id}">{$ticket.parent.name|escape}</a><br>
@@ -316,7 +316,7 @@
 							{if $ticket.childtickets}
 								<TR>
 									<TD class="bold">
-										{icon name="childticket" label="Child tickets:" fw=true}
+										{icon name="childticket" label="Child tickets:"}
 									</TD>
 									<TD>
 										{foreach $ticket.childtickets as $t}
@@ -330,7 +330,7 @@
 							{if $ticket.relatedtickets}
 							<TR>
 								<TD class="bold nobr">
-									{icon name="relatedticket" label="Related tickets:" fw=true}
+									{icon name="relatedticket" label="Related tickets:"}
 								</TD>
 								<TD>
 									{foreach $ticket.relatedtickets as $i}
@@ -373,7 +373,7 @@
 						{button icon="verifier" label="Transfer to verifier" tip="Transfer to verifier" onclick="location.href='?m=rtticketedit&id={$ticket.ticketid}&action=verify';"}
 					{else}
 						{if !empty($ticket['verifier_rtime']) && $ticket['verifierid'] != Auth::GetCurrentUser()}
-							{icon name="verifier" fw=true}<span style="color: {$_RT_STATES[$smarty.const.RT_VERIFIED].color}"> {trans("Ticket has been transferred to verifier")}</span>
+							{icon name="verifier"}<span style="color: {$_RT_STATES[$smarty.const.RT_VERIFIED].color}"> {trans("Ticket has been transferred to verifier")}</span>
 						{else}
 							{button icon="status-resolved" label="Resolve" tip="Resolve" onclick="location.href='?m=rtticketedit&id={$ticket.ticketid}&action=resolve';"}
 						{/if}
@@ -411,7 +411,7 @@
 	<TBODY>
 	<TR>
 		<TD style="width: 1%;" class="dark bold nobr">
-			{icon name="helpdesk" fw=true label="Requests causes (last year):"}
+			{icon name="helpdesk" label="Requests causes (last year):"}
 		</TD>
 		<TD style="width: 99%;" class="dark">
 			{trans("company's side")}: <span class="bold">{$stats.2.num|default:0}</span>,
@@ -430,13 +430,13 @@
 	<TBODY>
 	<TR>
 		<TD style="width: 1%;" class="dark bold nobr">
-			{icon name="customer" fw=true label="Customer:"}
+			{icon name="customer" label="Customer:"}
 		</TD>
 		<TD style="width: 1%;" class="dark nobr">
 			<span class="bold"><A href="?m=customerinfo&amp;id={$ticket.customerid}">{$customerinfo.customername}</A></span>
-			{icon name="home" fw=true} {$customerinfo.address} &nbsp;{$customerinfo.zip} {$customerinfo.city}
-			{if $customerinfo.phone}{icon name="phone" fw=true label="{$customerinfo.phone}"}{/if}
-			{icon name="money" fw=true} {if $customerinfo.balance < 0}<span class="red">{/if}{$customerinfo.balance|money_format}{if $customerinfo.balance < 0}</span>{/if}
+			{icon name="home"} {$customerinfo.address} &nbsp;{$customerinfo.zip} {$customerinfo.city}
+			{if $customerinfo.phone}{icon name="phone" label="{$customerinfo.phone}"}{/if}
+			{icon name="money"} {if $customerinfo.balance < 0}<span class="red">{/if}{$customerinfo.balance|money_format}{if $customerinfo.balance < 0}</span>{/if}
 		</TD>
 		<TD style="width: 98%;" class="dark text-right red bold">
 			{if $customerinfo.groups}
