--- a/templates/default/rt/rtticketrelatedlist.html
+++ b/templates/default/rt/rtticketrelatedlist.html
@@ -7,7 +7,7 @@
 	<THEAD>
 		<TR class="hand lmsbox-titlebar nobr" data-lmsbox-content="relationpanel-{$layout.module}">
 			<TD class="bold">
-				{icon name="helpdesk" label="Related tickets:" fw=true}
+				{icon name="helpdesk" label="Related tickets:"}
 			</TD>
 			<TD>
 				{if $ticket.state != $smarty.const.RT_RESOLVED}
