--- a/templates/default/taxrate/taxrateedit.html
+++ b/templates/default/taxrate/taxrateedit.html
@@ -14,7 +14,7 @@
 	<thead>
 		<tr>
 			<td>
-				{icon name="tax" fw=true}
+				{icon name="tax"}
 			</td>
 			<td>
 				<strong>{trans("Label:")}</strong>
@@ -28,7 +28,7 @@
 	<tbody>
 		<tr>
 			<td>
-				{icon name="cash" fw=true}
+				{icon name="cash"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Value:")}</strong>
@@ -40,7 +40,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="tax" fw=true}
+				{icon name="tax"}
 			</td>
 			<td>
 				<label for="taxing">
@@ -54,7 +54,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="tax" fw=true}
+				{icon name="tax"}
 			</td>
 			<td class="nobr">
 				<label for="reversecharge">
@@ -68,7 +68,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="calendar" fw=true}
+				{icon name="calendar"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Binds from date:")}</strong>
@@ -81,7 +81,7 @@
 		</tr>
 		<tr>
 			<td>
-				{icon name="calendar" fw=true}
+				{icon name="calendar"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Binds to date:")}</strong>
